[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/BigScene.gd" type="Script" id=1]
[ext_resource path="res://scenes/Scene_1-1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Scene_1-2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=4]




[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Scene1" parent="." index="0" instance=ExtResource( 2 )]

[node name="Scene2" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 1023.45, 0.54718 )

[node name="Scene3" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 2047.5, 2.78949 )

[node name="player" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 74.1768, 413.927 )


